--- a/views/locations/create.ejs
+++ b/views/locations/create.ejs
@@ -1,25 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
+<% layout('layouts/boilerplate')%>
+    <div class="row">
+        <h1 class="text-center">New Location</h1>
+        <div class="col-6 offset-3">
+            <form action="/locations" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title</label>
+                    <input class="form-control" type="text" id="title" name="location[title]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="address">Address</label>
+                    <input class="form-control" type="text" id="address" name="location[address]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL</label>
+                    <input class="form-control" type="text" id="image" name="location[image]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="budget">Budget for Visiting</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="budget-label">$</span>
+                        <input type="text" class="form-control" id="budget" placeholder="0.00" aria-label="budget"
+                            aria-describedby="budget-label" name="location[budget]">
+                    </div>
+                </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Location</title>
-</head>
-
-<body>
-    <form action="/locations" method="POST">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="location[title]">
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" id="description" name="location[description]"></textarea>
+                </div>
+                <div class="mb-3">
+                    <button class="btn btn-success">Add location</button>
+                </div>
+            </form>
+            <a href="/locations">All locations</a>
         </div>
-        <div>
-            <label for="address">Address</label>
-            <input type="text" id="address" name="location[address]">
-        </div>
-        <button>Add Location</button>
-    </form>
-    <a href="/locations">All Locations</a>
-</body>
-
-</html>
+    </div>
