--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,20 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Where to Visit</title>
-</head>
-<body>
-    <h1>Where To Visit</h1>
+<% layout('layouts/boilerplate')%>
+
+    <h1>All Locations</h1>
     <div>
-        <a href="/locations/create">Add Location</a>
+        <a href="/locations/new">Add Location</a>
     </div>
-    <ul>
-        <% for (let location of locations){%>
-        <li><a href="/locations/<%= location._id %>"><%= location.title %></a></li>
+    <% for (let location of locations){%>
+        <div class="card" mb-3>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" alt="" src="<%=location.image%>">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= location.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= location.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= location.address %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/locations/<%=location._id%>">View <%=location.title%>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <% }%>
-    </ul>
-</body>
-</html>
