--- a/views/locations/create.ejs
+++ b/views/locations/create.ejs
@@ -2,31 +2,32 @@
     <div class="row">
         <h1 class="text-center">New Location</h1>
         <div class="col-6 offset-3">
-            <form action="/locations" method="POST">
+            <form action="/locations" method="POST" class="needs-validation" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
-                    <input class="form-control" type="text" id="title" name="location[title]">
+                    <input class="form-control" type="text" id="title" name="location[title]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="address">Address</label>
-                    <input class="form-control" type="text" id="address" name="location[address]">
+                    <input class="form-control" type="text" id="address" name="location[address]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
-                    <input class="form-control" type="text" id="image" name="location[image]">
+                    <input class="form-control" type="text" id="image" name="location[image]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="budget">Budget for Visiting</label>
                     <div class="input-group">
                         <span class="input-group-text" id="budget-label">$</span>
                         <input type="text" class="form-control" id="budget" placeholder="0.00" aria-label="budget"
-                            aria-describedby="budget-label" name="location[budget]">
+                            aria-describedby="budget-label" name="location[budget]" required>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="location[description]"></textarea>
+                    <textarea class="form-control" type="text" id="description" name="location[description]"
+                        required></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-success">Add location</button>
