add review model and display

--- a/views/locations/show.ejs
+++ b/views/locations/show.ejs
@@ -1,7 +1,6 @@
 <% layout('layouts/boilerplate')%>
-
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
       <div class="card mb-3">
         <img src="<%= location.image%>" class="card-img-top" alt="...">
         <div class="card-body">
@@ -14,19 +13,50 @@
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item text-muted">
-            <%= location.address%>
+            <%= location.address %>
           </li>
-          <li class="list-group-item">$<%= location.budget%>/night</li>
+          <li class="list-group-item">$<%= location.budget %>/night</li>
         </ul>
         <div class="card-body">
-          <a class="card-link btn btn-info" href="/locations/<%=location._id%>/update">Edit</a>
+          <a class="card-link btn btn-info" href="/locations/<%=location._id%>/update">Update</a>
           <form class="d-inline" action="/locations/<%=location._id%>?_method=DELETE" method="POST">
-            <button class="btn btn-danger">Delete</button>
+            <button class="btn btn-danger">Remove</button>
           </form>
         </div>
         <div class="card-footer text-muted">
           2 days ago
         </div>
       </div>
+
+    </div>
+    <div class="col-6">
+      <h2>Leave a Review</h2>
+      <form action="/locations/<%=location._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
+        <div class="mb-3">
+          <label class="form-label" for="rating">Rating</label>
+          <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="body">Review</label>
+          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+          <div class="valid-feedback">
+            So far so good!
+          </div>
+        </div>
+        <button class="btn btn-success">Submit</button>
+      </form>
+      <% for(let review of location.reviews) { %>
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Rating: <%= review.rating %>
+            </h5>
+            <p class="card-text">Review: <%= review.body %>
+            </p>
+            <form action="/locations/<%=location._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+              <button class="btn btn-sm btn-danger">Remove</button>
+            </form>
+          </div>
+        </div>
+        <% } %>
     </div>
   </div>
