--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,7 +13,8 @@
 <body class="d-flex flex-column vh-100">
   <%- include('../partials/navbar')%>
     <main class="container mt-5">
-      <%- body %>
+      <%- include('../partials/flash')%>
+        <%- body %>
     </main>
     <%- include('../partials/footer')%>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -22,29 +23,7 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
         integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
         crossorigin="anonymous"></script>
+      <script src="/js/formValidation.js"></script>
 </body>
-<script>
-  // Extract from Boostrap 5 for Client-Side Validation 
-  // Source: "https://getbootstrap.com/docs/5.0/forms/validation/"
-  (function () {
-    'use strict'
-
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    var forms = document.querySelectorAll('.needs-validation')
-
-    // Loop over them and prevent submission
-    Array.prototype.slice.call(forms)
-      .forEach(function (form) {
-        form.addEventListener('submit', function (event) {
-          if (!form.checkValidity()) {
-            event.preventDefault()
-            event.stopPropagation()
-          }
-
-          form.classList.add('was-validated')
-        }, false)
-      })
-  })()
-</script>
 
 </html>
