--- a/views/locations/show.ejs
+++ b/views/locations/show.ejs
@@ -15,48 +15,58 @@
           <li class="list-group-item text-muted">
             <%= location.address %>
           </li>
+          <li class="list-group-item">By: <%= location.poster.username %>
+          </li>
           <li class="list-group-item">$<%= location.budget %>/night</li>
         </ul>
-        <div class="card-body">
-          <a class="card-link btn btn-info" href="/locations/<%=location._id%>/update">Update</a>
-          <form class="d-inline" action="/locations/<%=location._id%>?_method=DELETE" method="POST">
-            <button class="btn btn-danger">Remove</button>
-          </form>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
-        </div>
+        <% if( currentUser && location.poster.equals(currentUser._id)) {%>
+          <div class="card-body">
+            <a class="card-link btn btn-info" href="/locations/<%=location._id%>/update">Update</a>
+            <form class="d-inline" action="/locations/<%=location._id%>?_method=DELETE" method="POST">
+              <button class="btn btn-danger">Remove</button>
+            </form>
+            <% } %>
+          </div>
+          <div class="card-footer text-muted">
+            2 days ago
+          </div>
       </div>
 
     </div>
     <div class="col-6">
-      <h2>Leave a Review</h2>
-      <form action="/locations/<%=location._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
-        <div class="mb-3">
-          <label class="form-label" for="rating">Rating</label>
-          <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="body">Review</label>
-          <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
-          <div class="valid-feedback">
-            So far so good!
+      <% if(currentUser){ %>
+        <h2>Leave a Review</h2>
+        <form action="/locations/<%=location._id%>/reviews" method="POST" class="mb-3 needs-validation" novalidate>
+          <div class="mb-3">
+            <label class="form-label" for="rating">Rating</label>
+            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
           </div>
-        </div>
-        <button class="btn btn-success">Submit</button>
-      </form>
-      <% for(let review of location.reviews) { %>
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Rating: <%= review.rating %>
-            </h5>
-            <p class="card-text">Review: <%= review.body %>
-            </p>
-            <form action="/locations/<%=location._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
-              <button class="btn btn-sm btn-danger">Remove</button>
-            </form>
+          <div class="mb-3">
+            <label class="form-label" for="body">Review</label>
+            <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+            <div class="valid-feedback">
+              So far so good!
+            </div>
           </div>
-        </div>
+          <button class="btn btn-success">Submit</button>
+        </form>
         <% } %>
+          <% for(let review of location.reviews) { %>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">Rating: <%= review.rating %>
+                </h5>
+                <h6 class="card-subtitle mb-2 text-muted">By <%= review.poster.username%>
+                </h6>
+                <p class="card-text">Review: <%= review.body %>
+                </p>
+                <% if( currentUser && review.poster.equals(currentUser._id)) {%>
+                  <form action="/locations/<%=location._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-sm btn-danger">Remove</button>
+                  </form>
+                  <% } %>
+              </div>
+            </div>
+            <% } %>
     </div>
   </div>
