--- a/views/locations/create.ejs
+++ b/views/locations/create.ejs
@@ -2,7 +2,7 @@
     <div class="row">
         <h1 class="text-center">New Location</h1>
         <div class="col-6 offset-3">
-            <form action="/locations" method="POST" class="needs-validation" novalidate>
+            <form action="/locations" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
                     <input class="form-control" type="text" id="title" name="location[title]" required>
@@ -11,10 +11,16 @@
                     <label class="form-label" for="address">Address</label>
                     <input class="form-control" type="text" id="address" name="location[address]" required>
                 </div>
-                <div class="mb-3">
+                <!-- <div class="mb-3">
                     <label class="form-label" for="image">Image URL</label>
                     <input class="form-control" type="text" id="image" name="location[image]" required>
+                </div> -->
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description</label>
+                    <textarea class="form-control" type="text" id="description" name="location[description]"
+                        required></textarea>
                 </div>
+
                 <div class="mb-3">
                     <label class="form-label" for="budget">Budget for Visiting</label>
                     <div class="input-group">
@@ -25,14 +31,20 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="form-label" for="description">Description</label>
-                    <textarea class="form-control" type="text" id="description" name="location[description]"
-                        required></textarea>
+                    <div class="form-file custom-file">
+                        <input type="file" class="form-file-input" id="image" name="image" multiple>
+                        <label class="form-file-label" for="image">
+                            <span class="form-file-text custom-file-label">Image(s)</span>
+                            <span class="form-file-button">Choose</span>
+                        </label>
+                    </div>
                 </div>
+
                 <div class="mb-3">
                     <button class="btn btn-success">Add location</button>
                 </div>
             </form>
+            <hr>
             <a href="/locations">All locations</a>
         </div>
     </div>
