--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,20 +1,30 @@
 <% layout('layouts/boilerplate')%>
-  <h1>User Registration</h1>
-  <form action="/register" method="POST" class="validated-form" novalidate>
-    <div class="mb-3">
-      <label class="form-label" for="username">Username</label>
-      <input class="form-control" type="text" id="username" name="username" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="email">Email Address</label>
-      <input class="form-control" type="email" id="email" name="email" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label" for="password">Password</label>
-      <input class="form-control" type="password" id="password" name="password" required>
-      <div class="valid-feedback">
-        Thanks.
+  <div class="container d-flex justify-content align-items-center">
+    <div class="row">
+      <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
+        <div class="card">
+          <div class="card-body">
+            <h1>User Registration</h1>
+            <form action="/register" method="POST" class="validated-form" novalidate>
+              <div class="mb-3">
+                <label class="form-label" for="username">Username</label>
+                <input class="form-control" type="text" id="username" name="username" autofocus required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" for="email">Email Address</label>
+                <input class="form-control" type="email" id="email" name="email" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" for="password">Password</label>
+                <input class="form-control" type="password" id="password" name="password" required>
+                <div class="valid-feedback">
+                  Thanks.
+                </div>
+              </div>
+              <button class="btn btn-dark btn-block">Register Now</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-    <button class="btn btn-success">Register Now</button>
-  </form>
+  </div>
