--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Where to Visit</title>
+  <title>WhereToVisit</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+    integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/homePage.css">
 </head>
-<body>
-  <p>Where to Visit</p>
+
+<body class="d-flex text-center text-white bg-dark">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+      <div>
+        <h3 class="float-md-left mb-0">WhereToVisit</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-right">
+          <a class="nav-link active" aria-current="page" href="/">HomePage</a>
+          <a class="nav-link" href="/locations">Locations</a>
+          <% if(!currentUser) { %>
+            <a class="nav-link" href="/login">Login</a>
+            <a class="nav-link" href="/register">Register</a>
+            <% } else { %>
+              <a class="nav-link" href="/logout">Logout</a>
+              <% } %>
+        </nav>
+      </div>
+    </header>
+    <section class="px-3">
+      <h1>Are You Ready ?</h1>
+      <p class="lead"> 準備はできたか ？</p>
+      <p class="lead">你準備好了嗎？</p>
+      <p class="lead">Estas lista ?</p>
+      </p>
+      <a href="/locations" class="btn btn-lg btn-secondary btn-block font-weight-bold border-white bg-white">All
+        Locations</a>
+    </section>
+    <footer class="mt-auto text-white-50">
+      <p class="lead">By <a href="http://www.github.com/peterhychan">Peter Chan</a>, 2021 </p>
+    </footer>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+    integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
