--- a/views/locations/create.ejs
+++ b/views/locations/create.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate')%>
     <div class="row">
         <h1 class="text-center">New Location</h1>
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-md-3">
             <form action="/locations" method="POST" class="needs-validation" novalidate enctype="multipart/form-data">
                 <div class="mb-3">
                     <label class="form-label" for="title">Title</label>
@@ -39,12 +39,10 @@
                         </label>
                     </div>
                 </div>
-
+                <hr>
                 <div class="mb-3">
-                    <button class="btn btn-success">Add location</button>
+                    <button class="btn btn-secondary btn-block">Add location</button>
                 </div>
             </form>
-            <hr>
-            <a href="/locations">All locations</a>
         </div>
     </div>
