--- a/views/locations/index.ejs
+++ b/views/locations/index.ejs
@@ -1,32 +1,44 @@
 <% layout('layouts/boilerplate')%>
-
     <h1>All Locations</h1>
-    <div>
-        <a href="/locations/new">Add Location</a>
-    </div>
-    <% for (let location of locations){%>
-        <div class="card" mb-3>
-            <div class="row">
-                <div class="col-md-4">
-                    <img class="img-fluid" alt="" src="<%=location.images[0].url%>">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <%= location.title %>
-                        </h5>
-                        <p class="card-text">
-                            <%= location.description %>
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                <%= location.address %>
-                            </small>
-                        </p>
-                        <a class="btn btn-primary" href="/locations/<%=location._id%>">View <%=location.title%>
-                        </a>
+    <div id="map" style="width: 100%; height: 500px;"></div>
+    <div class="container">
+        <div>
+            <a href="/locations/new">Add Location</a>
+        </div>
+        <% for (let location of locations){%>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <%if(location.images.length) {%>
+                            <img class="img-fluid" alt="<%=location.images[0].url%>" src="<%=location.images[0].url%>">
+                            <% }else{ %>
+                                <img class="img-fluid" alt="else-image"
+                                    src="https://images.unsplash.com/photo-1614900152153-23bde40372d4?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=600&ixlib=rb-1.2.1&q=80&w=800">
+                                <% } %>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <%= location.title %>
+                            </h5>
+                            <p class="card-text">
+                                <%= location.description %>
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    <%= location.address %>
+                                </small>
+                            </p>
+                            <a class="btn btn-primary" href="/locations/<%=location._id%>">View <%=location.title%>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <% }%>
+            <% }%>
+    </div>
+    <script>
+        const mbxToken = '<%-process.env.MAPBOX_TOKEN%>'
+        const map_locations = { features: <%-JSON.stringify(locations) %>}
+    </script>
+    <script src="/js/mbxCluster.js"></script>
